# nature_inspired_networks

./: .autocheckpoint_loop.ps1  .autocheckpoint_loop2.ps1  .autocheckpoint_loop3.ps1  .autocheckpoint_loop4.ps1  .gitignore  .launch_baseline_bs128.ps1  .launch_baseline_bs128_lr3em3.ps1  .launch_baseline_hillclimb.ps1  .launch_n7_extension.ps1  .launch_phase9a.ps1  .launch_phase9c.ps1  .launch_phase9e_wave1.ps1  .launch_phase9f.ps1  ARCHITECTURE.md  AUDIT_SUMMARY.md  AUTORESEARCH_PROCESS.md  CLAUDE.md  ETHICS_STATEMENT.md  EXPERIMENT_LOG.md  FINDINGS.md  IDEA_TABLE.md  LIMITATIONS.md  MANIFESTO.md  MEDIUM.md  MINDMAP.md  NATURE_INSPIRED_NETWORKS.md  NEURIPS_CHECKLIST.md  PAPER.md  PARADIGM_COMPARISON.md  README.md  RESTRUCTURE_PLAN.md  RESULTS.md  REVIEWER_CHECKLIST.md  SETUP.md  SMOKE_PLAN.md  SOTA_COMPARISON.md  nin_links.json  paper_abstract.md  pyproject.toml  section10_output.txt  (+1 more)
.playwright-mcp/: page-2026-05-29T19-49-12-562Z.yml  page-2026-05-29T19-50-02-557Z.yml  page-2026-05-29T19-55-00-512Z.yml  page-2026-05-29T19-55-15-691Z.yml  page-2026-05-29T23-26-18-343Z.yml  page-2026-05-29T23-45-51-231Z.yml  page-2026-05-29T23-46-00-623Z.yml  page-2026-05-29T23-48-54-806Z.yml  page-2026-05-29T23-51-16-388Z.yml  page-2026-05-29T23-52-06-390Z.yml  page-2026-05-29T23-57-38-425Z.yml  page-2026-05-30T00-04-46-407Z.yml
audits/: AUDIT_CALIBRATION_RAW_NOTES.md  AUDIT_CALIBRATION_THIRD_PARTY.md  CROSS_FAMILY_HONEST_REAUDIT.md  FINAL_CRITIC_REPORT.md  FINAL_SNIFF_TEST_2026-05-30.md  G1_audit.md  G2_audit.md  G3_audit.md  G4_audit.md  G5_audit.md  G6_audit.md  G7_audit.md  (+17 more)
(+1229 files in other folders)
