[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nature_inspired_networks"
version = "0.1.0"
description = "NaturePriorBlock — nature-inspired-priored neural backbones (autoresearch-style ablations)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "dlmastery", email = "eranti@gmail.com" }]
license = { text = "MIT" }
dependencies = [
  "torch>=2.6",
  "torchvision>=0.21",
  "timm>=1.0",
  "einops>=0.8",
  "fvcore",
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "scikit-learn",
  "scikit-image",
  "rich",
  "pyyaml",
  "tqdm",
  "tensorboard",
  "medmnist",
  "persim",
  "ripser",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
